--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8"/>
 <title>random number market game</title>
 <link rel="stylesheet" href="styles.css"/>
+<link rel="icon" href="rnmg.png"/>
 </head>
 <body>
 <h1>random number market game</h1>
